SalaryReviewAnalysisEditorPage: 	Revised method protected void Page_Load(object sender, EventArgs e) to handle setting the proposed title code if
analysis is reclass.


SRAEmployee.cs:
	Added new class to handle saving a snapshot of the employee information at the time of the analysis.
	 (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1962. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5287

--- a/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
+++ b/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
@@ -63,6 +63,7 @@
     <Compile Include="DataInterfaces\IDaoFactory.cs" />
     <Compile Include="Domain\AppException.cs" />
     <Compile Include="Domain\ApptType.cs" />
+    <Compile Include="Domain\SRAEmployee.cs" />
     <Compile Include="Domain\Lookups.cs" />
     <Compile Include="Domain\User.cs" />
     <Compile Include="Domain\ESRSearchParameters.cs" />
@@ -112,6 +113,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Domain\Lookups.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Domain\SRAEmployee.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
