SalaryReviewAnalysisEditor: 	Removed current title code field and placed proposed title in panel, which is only displayed if reclass, in order to
clean up page layout. 
	Changed rptScenarios AlternatingItemTemplate ddlCriteraAlt from DataSourceID to DataSource='<%# Criteria %>' in order 

to handle using proposed title code's criteria.
	Revised method Page_Load to set pnlProposedTitle and only show if analysis is reclass.
	Revised method protected void btnDoEquityReview_Click(object sender, EventArgs e) to set pnlProposedTitle.Visible = 

false.
	Revised method protected void ddlProposedTitleCode_SelectedIndexChanged(object sender, EventArgs e) to set 

pnlProposedTitle.Visible = true.

SalaryReviewAnalysisPage:
	Revised Page_Load method to handle setting pnlProposedTitle according to whether or not analysis is reclass.
	Revised protected void gvSalaryReviewAnalysis_OnRowDataBound(object sender, GridViewRowEventArgs e) so that the Deans 

Office Comment were hidden from department users instead of the department comments. (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1976. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5299

--- a/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
+++ b/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Domain\Lookups.cs" />
     <Compile Include="Domain\User.cs" />
     <Compile Include="Domain\ESRSearchParameters.cs" />
-    <Compile Include="Domain\UCDEmlpoyeeID.cs" />
+    <Compile Include="Domain\UCDEmployeeID.cs" />
     <Compile Include="Domain\UCDEmployee.cs" />
     <Compile Include="Domain\DomainObject.cs" />
     <Compile Include="Domain\Exception.cs" />
