SalaryReviewAnalysisBLL: 	Replaced logic in method private static IList<SalaryReviewAnalysis> GetListFilteredByUser(string userId, bool
isDepartmentUser, IList<SalaryReviewAnalysis> analyses) from if (EmployeeBLL.IsDepartmentEmployee(user, sra.Employee)) to if 

(SRAEmployeeBLL.IsDepartmentEmployee(user, sra.Employee)) because now using SRA Employee.
	Revised method public static void UpdateRecord(SalaryReviewAnalysis record) to set 

record.Employee.CorrespondingAnalysisID = record.ID;

SRAEmployeeBLL:
	Changed id from string to int.
	Added method public static bool IsDepartmentEmployee(UCDEmployee user, SRAEmployee employee).
	public static SRAEmployee GetBySalaryReviewAnalysisID(int id).

SalaryReviewAnalysis.hbm.xml
	Changed Employee relationship to use PkSRAEmployee.

SRAEmployee:
	changed id from string to int.
	Added all appropriate methods from UCDEmployee and Employee.

SRAEmployee.hbm.xml:
	Added column Created.
	Changed id to PkSRAEmployee and made identity field.
	Removed insert="false update="false" from CorrespondingAnalysisID so it could be set by BLL.

RandomNum.cs:
	Added new wrapper class for returning random numbers.

SalaryReviewAnalysisEditor:
	Revised method protected void btnSubmitSalaryReviewAnalysis_Click(object sender, EventArgs e) to use SRAEmployee emp = sra.Employee;

SalaryReviewAnalysisPage:
	Changed odsSAREmployee's Select method  from GetByID to GetBySalaryReviewAnalysisID and Type from string to int.
	Revised method protected void Page_Load(object sender, EventArgs e) Session.Add(KEY_EMPLOYEE_ID, sra.Employee.ID) to Session.Add(KEY_EMPLOYEE_ID, sra.Employee.PkEmployee);
	Revised method protected void gvSalaryReviewAnalysis_SelectedIndexChanged(object sender, EventArgs e) Session.Add(KEY_EMPLOYEE_ID, sra.Employee.ID) to Session.Add(KEY_EMPLOYEE_ID, sra.Employee.PkEmployee); (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1978. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/Defa

--- a/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
+++ b/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Domain\ValidateBO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DesignByContract.cs" />
+    <Compile Include="Utils\RandomNum.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Domain\ApptType.hbm.xml" />
