SalaryGradeQuartilesBLL.cs: 	Added method 	  public static void UpdateRecord(             string salaryGrade,             decimal minAnnual,             decimal firstQrtleAnnual,             decimal midAnnual,             decimal thirdQrtleAnnual,             decimal maxAnnual,             DateTime effectiveDate)
SalaryGradeQuartiles.cs
	Added validation to class.

ApplicationPage.cs:
	Added constant KEY_NAV_PANEL
	Added methods HideNavPAnel and ShowNavPanel.

Added various images for navigation bar.

Esra.css:
	Added styling for nav bar.

Default.aspx.cs:
	Revised method protected void rblDemoMode_SelectedIndexChanged(object sender, EventArgs e): Added ShowNavPanel().
	Revised method protected void Page_Load(object sender, EventArgs e) to hide and show nav panel, plus return to vDemo 

if navigated to.

Esra.Master:
	Added nav bar and removed home and logout buttons from page bottom.
	
	Revised method protected void imgBtnLogout_Click(object sender, EventArgs e) to accept EventArgs instead of 

ImageClickEventArgs, so I can also call the method from a variety of asp controls, link button, hyperlink, image button, etc.
        
SalaryGradeQuartiles_UserInputForm.aspx:
	Added formatting to dollar fields.
	Added edit header to edit templates.
	Added Update method name and Update parameters to odsSalaryGradeQuartiles.
	Changed Effective Date and Salary Grade to read only.
	Added method protected void gvSalaryGradeQuartiles_RowUpdating(object sender, GridViewUpdateEventArgs e) for use in 

setting status message to be displayed.
	
	 (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1995. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5315

--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -187,10 +187,16 @@
   <ItemGroup>
     <Content Include="ExportToExcel.aspx" />
     <Content Include="images\common\collapse_blue.jpg" />
+    <Content Include="images\common\employee_salary_comparison.png" />
     <Content Include="images\common\expand_blue.jpg" />
+    <Content Include="images\common\feedback.png" />
     <Content Include="images\common\home_icon-full.jpg" />
     <Content Include="images\common\loading.gif" />
+    <Content Include="images\common\logout.png" />
     <Content Include="images\common\Logout_Button.jpg" />
+    <Content Include="images\common\maintenance.png" />
+    <Content Include="images\common\salary_scales.png" />
+    <Content Include="images\common\user_admin.png" />
     <Content Include="images\ibAddUser.gif" />
     <Content Include="includes\exportToExcel.js" />
     <Content Include="includes\jsUpdateProgress.js" />
