--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -197,7 +197,9 @@
     <Content Include="images\common\maintenance.png" />
     <Content Include="images\common\salary_scales.png" />
     <Content Include="images\common\user_admin.png" />
+    <Content Include="images\delete.gif" />
     <Content Include="images\ibAddUser.gif" />
+    <Content Include="images\select.gif" />
     <Content Include="includes\exportToExcel.js" />
     <Content Include="includes\jsUpdateProgress.js" />
     <Content Include="LogoutPage.aspx" />
