(Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 2050. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5364

--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -209,6 +209,7 @@
     <Content Include="images\delete.gif" />
     <Content Include="images\ibAddUser.gif" />
     <Content Include="images\select.gif" />
+    <Content Include="includes\Esra_print.css" />
     <Content Include="includes\exportToExcel.js" />
     <Content Include="includes\jsUpdateProgress.js" />
     <Content Include="LogoutPage.aspx" />
