Esra.master.cs: 	Revised method protected void imgBtnLogout_Click(object sender, EventArgs e): Changed string postBackUrl from "https://cas.ucdavis.edu/cas/logout?service=" + Request.Url.ToString().Substring(0, Request.Url.ToString().LastIndexOf("/") +1) + DEFAULT_PAGE;  to "https://cas.ucdavis.edu/cas/logout?service=" + Request.Url.ToString().Substring(0, Request.Url.ToString().LastIndexOf("/") +1) + "LogoutPage.aspx";
LogoutPage.aspx:
	Revised to use includes/cas.css.

WebConfig:
	Changed to allow includes directory.

Added file includes/cas.css for use with LogoutPage. (Updated by TFS to TFS Connector, server: http://1x:8080/, id 3307. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5385

--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -212,6 +212,7 @@
     <Content Include="includes\Esra_print.css" />
     <Content Include="includes\exportToExcel.js" />
     <Content Include="includes\jsUpdateProgress.js" />
+    <Content Include="includes\cas.css" />
     <Content Include="LogoutPage.aspx" />
     <Content Include="ModalConfirm.aspx" />
     <Content Include="NewSalarySteps_UserInputForm.aspx" />
