Added ChangeType and EmployeeChanges classes to core domain. Added EmployeeChangesBLL to BLL project. Added EmployeeChangeTests to Test.BusinessTests. (Updated by TFS to TFS Connector, server: http://1x:8080/, id 4318. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5424

--- a/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
+++ b/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppExceptionBLL.cs" />
+    <Compile Include="EmployeeChangesBLL.cs" />
     <Compile Include="SRAEmployeeBLL.cs" />
     <Compile Include="SalaryStepBLL.cs" />
     <Compile Include="SalaryGradeQuartilesBLL.cs" />
