--- a/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
+++ b/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
@@ -66,6 +66,8 @@
     <Compile Include="DataInterfaces\IDaoFactory.cs" />
     <Compile Include="Domain\AppException.cs" />
     <Compile Include="Domain\ApptType.cs" />
+    <Compile Include="Domain\ChangeType.cs" />
+    <Compile Include="Domain\EmployeeChanges.cs" />
     <Compile Include="Domain\SRAEmployee.cs" />
     <Compile Include="Domain\Lookups.cs" />
     <Compile Include="Domain\User.cs" />
@@ -119,6 +121,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Domain\SRAEmployee.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Domain\ChangeType.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Domain\EmployeeChanges.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
