--- a/CAESDO.Esra.Test/CAESDO.Esra.Test.csproj
+++ b/CAESDO.Esra.Test/CAESDO.Esra.Test.csproj
@@ -50,11 +50,11 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="NHibernate, Version=2.1.0.1001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\dlls\NHibernate.dll</HintPath>
+      <HintPath>..\..\dlls\Bin\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate.ProxyGenerators.CastleDynamicProxy, Version=2.1.0.1001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\dlls\NHibernate.ProxyGenerators.CastleDynamicProxy.dll</HintPath>
+      <HintPath>..\..\dlls\Bin\NHibernate.ProxyGenerators.CastleDynamicProxy.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -63,11 +63,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.SQLite, Version=1.0.61.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\dlls\System.Data.SQLite.DLL</HintPath>
+      <HintPath>..\..\dlls\Bin\System.Data.SQLite.DLL</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessTests\EmployeeChangesTests.cs" />
     <Compile Include="BusinessTests\EmployeeListTests.cs" />
     <Compile Include="DatabaseHelper.cs" />
     <Compile Include="DatabaseTestBase.cs" />
