--- a/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
+++ b/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppExceptionBLL.cs" />
+    <Compile Include="ChangeTypeBLL.cs" />
     <Compile Include="EmployeeChangesBLL.cs" />
     <Compile Include="SRAEmployeeBLL.cs" />
     <Compile Include="SalaryStepBLL.cs" />
