Added support for ELMAH error logging. (Updated by TFS to TFS Connector, server: http://1x:8080/, id 4348. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5438

--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -285,6 +285,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\dlls\CAESOps.dll</HintPath>
     </Reference>
+    <Reference Include="Elmah, Version=1.0.11211.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\dlls\Elmah.dll</HintPath>
+    </Reference>
     <Reference Include="Interop.MSXML2, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\dlls\Interop.MSXML2.dll</HintPath>
