Updated web.config for test.caes (Updated by TFS to TFS Connector, server: http://1x:8080/, id 6520. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5494

--- a/Esra.Web/Properties/Settings.settings
+++ b/Esra.Web/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="Esra_Web_CatOps_CatbertWebService" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">https://url.caes.ucdavis.edu/catbert/services/catbertwebservice.asmx</Value>
+      <Value Profile="(Default)">https://test.caes.ucdavis.edu/catbert3/services/catbertwebservice.asmx</Value>
     </Setting>
   </Settings>
 </SettingsFile>
